# PPP

Lab 1/: CMakeLists.txt  p2p.cpp
Lab 2/: CMakeLists.txt  bcast.cpp  scatter.cpp
Lab 3/: CMakeLists.txt  comm.cpp  comm.txt
Lab 4/: CMakeLists.txt  type.cpp
Lab 5/: CMakeLists.txt  one.cpp
Lab 6/: CMakeLists.txt  io.cpp
Lab 7/: Matrix-File.h5  hdf5.cpp
projekt/: CMakeLists.txt  xlogin00.aux  xlogin00.out  xlogin00.tex
projekt/scripts/: ppp_scorep_filter.flt  run_full_hybrid_1d.sh  run_full_hybrid_2d.sh  run_full_mpi_2d.sh  run_scorep_profile.sh  tester.sh
projekt/sources/: Hdf5Handle.hpp  HeatSolverBase.cpp  MaterialProperties.hpp  ParallelHeatSolver.cpp  ParallelHeatSolver.hpp  SimulationProperties.cpp  data_generator.cpp  main.cpp  utils.cpp  utils.hpp
